# maahelper

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_READY.md  LICENSE  MANIFEST.in  MaaHelper_Getting_Started.ipynb  README.md  __init__.py  ai_helper.py  deploy.py  pyproject.toml  requirements.txt  setup.py  validate_deployment.py
.github/workflows/: ci.yml
maahelper/: __init__.py  cli_entry.py
maahelper-vscode-extension/: package.json
maahelper-vscode-extension/src/: extension.ts
maahelper-vscode-extension/src/providers/: diagnosticsProvider.ts  maahelperProvider.ts
maahelper-vscode-extension/src/workflow/: workflowManager.ts
maahelper/cli/: __init__.py  modern_cli_selector.py  modern_enhanced_cli.py
maahelper/core/: __init__.py  llm_client.py
maahelper/ide/: __init__.py  commands.py
maahelper/lsp/: server.py
maahelper/managers/: __init__.py  advanced_api_key_manager.py  streamlined_api_key_manager.py
maahelper/utils/: __init__.py  streaming.py  streamlined_file_handler.py
maahelper/workflows/: commands.py  engine.py  nodes.py  state.py  templates.py
scripts/: deploy.py  validate_structure.py
tests/: __init__.py  test_comprehensive_cli.py  test_comprehensive_file_handling.py  test_comprehensive_imports.py  test_comprehensive_llm.py  test_ide_integration.py  test_llm_client.py  test_workflows.py
