[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maahelper"
version = "1.0.0"
description = "MaaHelper - Advanced AI-powered coding assistant with real-time analysis and Git integration"
readme = "README.md"
license = "MIT"
authors = [
    {name = "AIStudent", email = "aistudentlearn4@gmail.com"}
]
maintainers = [
    {name = "AIMLDev726", email = "aistudentlearn4@gmail.com"}
]
keywords = ["ai", "assistant", "code-analysis", "bug-fixing", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console"
]
requires-python = ">=3.8"
dependencies = [
    # Core AI Dependencies
    "openai>=1.0.0",

    # UI and Display
    "rich>=13.0.0",

    # Security and Encryption
    "cryptography>=41.0.0",
    "keyring>=24.0.0",

    # Logging
    "structlog>=23.0.0",

    # CLI and Configuration
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",

    # Async support
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",

    # Encoding and Token handling
    "chardet>=5.0.0",
    "tiktoken>=0.5.0",

    # File watching and Git integration
    "watchdog>=3.0.0",
    "gitpython>=3.1.0",

    # Web search capabilities
    "googlesearch-python>=1.2.0",
    "ddgs>=0.9.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",

    # Python compatibility
    "pathlib2; python_version<'3.4'",
    "typing-extensions>=4.0.0; python_version<'3.10'"
]

[project.scripts]

# ===== MAIN CLI SELECTOR =====
maahelper-selector = "maahelper.cli.modern_cli_selector:main"
maahelper-menu = "maahelper.cli.modern_cli_selector:main"

# ===== USER-FRIENDLY CLI NAMES =====
# Most Powerful - G4F + Groq + Internet (Flagship)
maahelper-super-chat = "maahelper.cli.modern_enhanced_cli:main"
maahelper-smart = "maahelper.cli.modern_enhanced_cli:main"
maahelper-genius = "maahelper.cli.modern_enhanced_cli:main"

# Fast Single Provider - Groq Only
maahelper-fast-chat = "maahelper.cli.modern_cli_selector:main"
maahelper-quick = "maahelper.cli.modern_cli_selector:main"
maahelper-turbo = "maahelper.cli.modern_cli_selector:main"

# Multi-Provider - Choose Any AI
maahelper-multi = "maahelper.cli.modern_cli_selector:main"
maahelper-pro = "maahelper.cli.modern_cli_selector:main"

# Advanced Features - File Processing + Multi-Provider
maahelper-advanced = "maahelper.cli.modern_enhanced_cli:main"
maahelper-dev = "maahelper.cli.modern_enhanced_cli:main"
maahelper-expert = "maahelper.cli.modern_enhanced_cli:main"

# Primary entry point - handles --help/--version properly
maahelper = "maahelper.cli_entry:main"

# API Key Management Aliases
maahelper-keys = "maahelper.managers.advanced_api_key_manager:main"
maahelper-api-key = "maahelper.managers.advanced_api_key_manager:main"
maahelper-setup-keys = "maahelper.managers.advanced_api_key_manager:main"

# IDE Integration and Workflows
maahelper-lsp = "maahelper.lsp.server:main"
maahelper-workflow = "maahelper.workflows.commands:main"
maahelper-ide = "maahelper.ide.commands:main"

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

# LSP server support
lsp = [
    "pygls>=1.0.0",
    "lsprotocol>=2023.0.1"
]

# IDE integration features
ide = [
    "pygls>=1.0.0",
    "lsprotocol>=2023.0.1",
    "aiofiles>=23.0.0"
]

# Workflow engine features
workflows = [
    "aiofiles>=23.0.0"
]

# Full feature set with all providers
full = [
    "pygls>=1.0.0",
    "lsprotocol>=2023.0.1",
    "groq>=0.4.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.3.0",
    "g4f>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-ollama>=0.1.0"
]

# Search capabilities
search = [
    "ddgs>=0.9.0",
    "googlesearch-python>=1.2.0"
]

# Additional AI providers
providers = [
    "groq>=0.4.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.3.0",
    "g4f>=0.2.0"
]

# MCP (Model Context Protocol) support
mcp = [
    "mcp>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/AIMLDev726/maahelper"
Documentation = "https://github.com/AIMLDev726/maahelper#readme"
Repository = "https://github.com/AIMLDev726/maahelper"
"Bug Tracker" = "https://github.com/AIMLDev726/maahelper/issues"
Changelog = "https://github.com/AIMLDev726/maahelper/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["maahelper*"]
exclude = ["tests*", "maahelper-vscode-extension*"]

[tool.setuptools.package-data]
maahelper = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=maahelper --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true